--- a/static/main.html
+++ b/static/main.html
@@ -172,7 +172,6 @@
     </el-dialog>
     <el-dialog custom-class="p1" v-model="dialogTableVisible1" size="full" :show-close="false">
         <div class="p1_inner">
-
             <h2 style="text-align: center">整车货物运输承运协议</h2>
             <div class="clearfix">
                 <div class="p1_2">
@@ -272,7 +271,69 @@
         </div>
     </el-dialog>
     <el-dialog custom-class="p2" v-model="dialogTableVisible2" size="full" :show-close="false">
-
+        <div class="p2_inner">
+            <h2 style="text-align: center">拣货单</h2>
+            <p style="margin-bottom: 5px;margin-top: -25px;">出库单号：{{printDatas.p2.ckCkdjNo[0].ckCkdjNo}}</p>
+            <el-table
+                    :data="printDatas.p2.data"
+                    :border="true">
+                <el-table-column
+                        type="index"
+                        width="55">
+                </el-table-column>
+                <el-table-column
+                        prop="mfunRepertory.baseLocation.blLname"
+                        width="120"
+                        align="center"
+                        label="库位名称">
+                </el-table-column>
+                <el-table-column
+                        prop="mfunRepertory.baseGoods.bgGoodsNo"
+                        width="140"
+                        align="center"
+                        label="物料编码">
+                </el-table-column>
+                <el-table-column
+                        prop="mfunRepertory.baseGoods.bgGoodsName"
+                        width="350"
+                        align="center"
+                        label="物料名称">
+                </el-table-column>
+                <el-table-column
+                        prop="msxMxCount"
+                        width="65"
+                        align="center"
+                        label="台数">
+                </el-table-column>
+                <el-table-column
+                        prop="jianshu"
+                        align="center"
+                        width="95"
+                        label="件数">
+                </el-table-column>
+                <el-table-column
+                        prop="mfunRepertory.baseGoods.bgHsl"
+                        width="80"
+                        align="center"
+                        label="换算量">
+                </el-table-column>
+                <el-table-column
+                        align="center"
+                        label="备注">
+                </el-table-column>
+            </el-table>
+            <div class="clearfix">
+                <div class="p2_2">
+                    <p>客户地址：</p>
+                    <p></p>
+                </div>
+                <div class="p2_2">
+                    <p>捡货仓管：</p>
+                    <p>客户名称：</p>
+                </div>
+            </div>
+            <h4>合计：</h4>
+        </div>
     </el-dialog>
 </div>
 </body>
