--- a/static/main.html
+++ b/static/main.html
@@ -103,7 +103,7 @@
             <div class="inner">
                 <el-row class="contentHeader">
                     <el-col :span="4">
-                        <p style="font-size: 20px;color: #333333;">{{window.dbmessage.baseArehouses[0].baName}}</p>
+                        <p style="font-size: 20px;color: #333333;">{{window.dbmessage.baseArehouses[0].baName||乐速仓}}</p>
                     </el-col>
                     <el-col :span="6" :offset="14">
                         <el-breadcrumb separator=">">
