修正 打印分拣单 字段错误

--- a/static/main.html
+++ b/static/main.html
@@ -323,11 +323,11 @@
             </el-table>
             <div class="clearfix">
                 <div class="p2_2">
-                    <p>客户地址：{{printDatas.p2.row.ckCkdjClientname}}</p>
+                    <p>客户地址：{{printDatas.p2.row.ckAdress}}</p>
                 </div>
                 <div class="p2_2">
                     <p>捡货仓管：</p>
-                    <p>客户名称：{{printDatas.p2.row.ckAdress}}</p>
+                    <p>客户名称：{{printDatas.p2.row.ckCkdjClientname}}</p>
                 </div>
             </div>
             <div class="clearfix" style="height: 70px;">
