底层框架升级     1. 基础类   分页查询     2. 核心     新建弹出层     3. 核心     表单 自动配置     4. 核心     表单字段

--- a/static/main.html
+++ b/static/main.html
@@ -112,9 +112,7 @@
                         </el-breadcrumb>
                     </el-col>
                 </el-row>
-                <div id="showing" v-loading.body="showingLoading" element-loading-text="拼命加载中">
-
-                </div>
+                <div id="showing" v-loading.body="showingLoading" element-loading-text="拼命加载中"></div>
             </div>
         </div>
     </div>
