业务处理 出库预约 完成安全 输入货品编号

--- a/static/main.html
+++ b/static/main.html
@@ -14,7 +14,7 @@
     <script src="/static/lib/common.js"></script>
     <script>
         window.dbmessage = JSON.parse('<%-JSON.stringify(data)%>');
-        window.statusConfig = JSON.parse('<%-JSON.stringify(statusCode)%>');
+//        window.statusConfig = JSON.parse('<%-JSON.stringify(statusCode)%>');
     </script>
     <!--/prod-->
     <title>乐速 仓储管理系统 V3.0</title>
